src/styles/Sentry.css
header {
    width: 100%;
}

nav {
    width: 100%;
}

.App {
    position: relative;
    z-index: 3;
}

.padding-space {
    padding: .5rem;
    position: relative;
    background: rgb(25, 25, 25);
}

.app-header {
    display: flex;
    width: 100%;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    background: rgb(25, 25, 25);
    color: var(--text-light);
    box-shadow: var(--box-shadow);
    position: relative;
}

.particles {
    z-index: 0;
    opacity: 0;
    animation: fadeIn 3s ease-in forwards;
}

@keyframes fadeIn {
    from {
        opacity: 0;
    }

    to {
        opacity: 1;
    }
}

.h1-sentry {
    padding: 2rem 0 2rem 0;
    position: relative;
    z-index: 5;
}

.app-nav-item {
    margin: 0;
}

.app-nav-side {
    width: 100%;
    background-color: rgba(32, 32, 32);
    color: var(--text-light);
    padding: 2rem;
    display: flex;
    flex-direction: column;
    position: relative;
    z-index: 1;
}

.h2-sentry {
    font-size: 1em;
    padding-bottom: 1.5rem;
}

.App {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    background-color: var(--background-dark);
    color: var(--text-light);
    box-shadow: var(--box-shadow);
}

.Page-Description {
    border-radius: var(--border-radius);
    cursor: auto;
    background-color: var(--background-grey);
    color: var(--text-light);
    padding: 1rem;
    box-shadow: var(--box-shadow);
}

.Hyperlink {
    text-decoration: none;
    color: var(--primary-accent);
    transition: var(--transition);
}

.Hyperlink:hover {
    color: var(--secondary-accent);
}

.loadmore-container {
    width: 100%;
    height: 100%;
    background-color: rgb(21, 21, 21);
    position: relative;
}

.Button-Load {
    border: 2px solid var(--background-grey);
    background: var(--background-dark);
    color: var(--text-light);
    border-radius: var(--border-radius);
    font-size: 1rem;
    padding: 1rem;
    width: 10rem;
    margin-top: 2.5rem;
    transition: var(--transition);
    cursor: pointer;
    position: relative;
    z-index: 10;
}

.Button-Load:hover {
    background: rgba(255, 255, 255, 0.114);
    border-color: var(--primary-accent);
}

.subtitle {
    font-size: 1.5em;
    color: var(--text-dark);
}

.sub-text {
    padding: 1rem;
    background: var(--background-grey);
    color: var(--text-light);
    border-radius: var(--border-radius);
    box-shadow: var(--box-shadow);
}

.Footer-Sentry {
    width: 100%;
    background: rgb(21, 21, 21);
    color: var(--text-light);
    padding: 2rem;
    position: relative;
    display: flex;
    flex-direction: column;
}

.Footer-Description {
    position: relative;
    z-index: 5;
    padding: 1rem 2rem 1rem 2rem;
    border-radius: var(--border-radius);
    align-self: center;
    width: 100%;
}

.Description-Text {
    display: inline;
}

@media only screen and (min-width: 1200px) {
    .h2-sentry {
        font-size: 1.8em;
    }

    .h3-sentry {
        font-size: 1.4em;
    }
}

